redactable/tests/ui/redact_free_raw_values_rejected.stderr
error[E0277]: `String` has no declared redaction behavior
 --> tests/ui/redact_free_raw_values_rejected.rs:4:20
  |
4 |     let _ = redact(String::from("secret"));
  |             ------ ^^^^^^^^^^^^^^^^^^^^^^ raw values cannot be redacted or certified as redacted output
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `Redactable` is not implemented for `String`
  = note: derive `Sensitive`, `NotSensitive`, or `NotSensitiveDisplay` on the type
  = note: or wrap the value in `SensitiveValue<T, P>` / `NotSensitiveValue<T>`
  = help: the following other types implement trait `Redactable`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
          and $N others
note: required by a bound in `redactable::redact`
 --> src/redaction/redact.rs
  |
  | pub fn redact<W>(value: W) -> W
  |        ------ required by a bound in this function
  | where
  |     W: Redactable,
  |        ^^^^^^^^^^ required by this bound in `redact`

error[E0277]: `u64` has no declared redaction behavior
 --> tests/ui/redact_free_raw_values_rejected.rs:5:20
  |
5 |     let _ = redact(7_u64);
  |             ------ ^^^^^ raw values cannot be redacted or certified as redacted output
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `Redactable` is not implemented for `u64`
  = note: derive `Sensitive`, `NotSensitive`, or `NotSensitiveDisplay` on the type
  = note: or wrap the value in `SensitiveValue<T, P>` / `NotSensitiveValue<T>`
  = help: the following other types implement trait `Redactable`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
          and $N others
note: required by a bound in `redactable::redact`
 --> src/redaction/redact.rs
  |
  | pub fn redact<W>(value: W) -> W
  |        ------ required by a bound in this function
  | where
  |     W: Redactable,
  |        ^^^^^^^^^^ required by this bound in `redact`

error[E0277]: `String` has no declared redaction behavior
 --> tests/ui/redact_free_raw_values_rejected.rs:6:20
  |
6 |     let _ = redact(vec![String::from("secret")]);
  |             ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ raw values cannot be redacted or certified as redacted output
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `Redactable` is not implemented for `String`
  = note: derive `Sensitive`, `NotSensitive`, or `NotSensitiveDisplay` on the type
  = note: or wrap the value in `SensitiveValue<T, P>` / `NotSensitiveValue<T>`
  = help: the following other types implement trait `Redactable`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
          and $N others
  = note: required for `Vec<String>` to implement `Redactable`
note: required by a bound in `redactable::redact`
 --> src/redaction/redact.rs
  |
  | pub fn redact<W>(value: W) -> W
  |        ------ required by a bound in this function
  | where
  |     W: Redactable,
  |        ^^^^^^^^^^ required by this bound in `redact`

error[E0277]: `String` has no declared redaction behavior
 --> tests/ui/redact_free_raw_values_rejected.rs:7:25
  |
7 |     let _ = redact(Some(String::from("secret")));
  |             ------      ^^^^^^^^^^^^^^^^^^^^^^ raw values cannot be redacted or certified as redacted output
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `Redactable` is not implemented for `String`
  = note: derive `Sensitive`, `NotSensitive`, or `NotSensitiveDisplay` on the type
  = note: or wrap the value in `SensitiveValue<T, P>` / `NotSensitiveValue<T>`
  = help: the following other types implement trait `Redactable`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0,)
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
          and $N others
  = note: required for `Option<String>` to implement `Redactable`
note: required by a bound in `redactable::redact`
 --> src/redaction/redact.rs
  |
  | pub fn redact<W>(value: W) -> W
  |        ------ required by a bound in this function
  | where
  |     W: Redactable,
  |        ^^^^^^^^^^ required by this bound in `redact`
